--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: bun run build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-            deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+            github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./public
